--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "replace-in-files": "^3.0.0",
     "typedoc": "^0.22.10",
+    "typedoc-plugin-extras": "^2.2.3",
     "typedoc-plugin-merge-modules": "^3.1.0",
     "typedoc-plugin-missing-exports": "^0.22.6",
     "typedoc-plugin-rename-defaults": "^0.4.0",
